Modify: fix sidebar
